# UCF

./: .gitignore  AGENTS.md  BOTTLE_NECKS.md  CONTEXT_TRACER.md  CRITIQUE.md  CURSOR_HOOKS.md  DEPENDENCY_GRAPH.md  FRAMEWORK_STRESS_TEST_SESSION_2.md  GENERATORS.md  IMPLEMENTATION_ROADMAP.md  INVARIANTS.md  NOTICE  PLANS.md  README.md  SECURITY.md  SPEC_LANGUAGE.md  STRESS_TEST_REPORT.md  UCF_FRAMEWORK_GUIDE.md  pyproject.toml
.codex/: hooks.json
.codex/hooks/: stop_quality.py
.github/workflows/: quality.yml
adapters/go-stdlib/: README.md  go.mod
adapters/python-pytest/: README.md  adapter.py
adapters/typescript-fastify/: README.md  package-lock.json  package.json  tsconfig.json
docs/: ADAPTER_CONFORMANCE.md  ADAPTER_PROTOCOL.md  CAPABILITIES.md  CHANGE_LIFECYCLE.md  EVIDENCE_STATUS.md  GENERATION.md  INVENTORY.md  IR.md  ONBOARDING.md  RATCHET.md  RUNTIME_EVIDENCE.md
docs/automation/: BACKLOG.md  BASELINE.md  README.md  STATE.md  TARGET_STATE.md
docs/benchmarks/: REL-001.md  rel001-report.json
docs/plans/: 2026-02-28-conditional-steps-design.md  2026-02-28-conditional-steps-plan.md  ADP-001-out-of-process-adapter-protocol.md  ADP-002-adapter-conformance-kit.md  BRN-001-read-only-inventory.md  BRN-002-python-brownfield-vertical-slice.md  BRN-003-baseline-and-ratchet.md  BRN-004-optional-runtime-evidence.md  CHG-001-openspec-change-envelope.md  CHG-002-impact-approval-gates.md  ECO-001-typescript-framework-adapter.md  ECO-002-compiled-ecosystem-spike-and-selection.md  ECO-003-non-http-platform-proof.md  FND-001-green-baseline.md  FND-002-strict-parser-and-claims.md  FND-003-deterministic-gates-and-packaging.md  IR-001-versioned-behavior-ir.md  IR-002-intent-evidence-claims.md  REL-001-end-to-end-adoption-benchmark.md  REL-002-stable-release-readiness.md  VER-001-deterministic-executable-generation.md  VER-002-evidence-loop.md
docs/release/: COMPATIBILITY.md  MIGRATION.md  PACKAGING.md  PRIVACY.md  README.md  SUPPORT.md  VERSIONING.md
specs/actions/: acquire-lock.yaml  analyze-error-reachability.yaml  analyze-input-partitions.yaml  analyze-invariant-necessity.yaml  analyze-platform-completeness.yaml  analyze-resource-conflicts.yaml  analyze-state-coverage.yaml  build-dependency-graph.yaml  build-graph-json.yaml  build-spec-code-map.yaml  check-slug-exists.yaml  check-spec-completeness.yaml  compute-impact.yaml  create-short-link.yaml  delete-url.yaml  delete-urls-batch.yaml  detect-drift.yaml  detect-write-conflicts.yaml  extract-error-code-from-alt-flow.yaml  extract-error-definitions.yaml  finalize-order.yaml  find-action-that-raises-error.yaml  generate-negative-tests.yaml  generate-skeleton-specs.yaml  generate-slug.yaml  generate-tests.yaml  generate-trigger-verification-assertion.yaml  get-spec-detail.yaml  get-spec-relationships.yaml  get-url-by-slug.yaml  get-url-stats.yaml  increment-click-count.yaml  list-expired-urls.yaml  list-spec-catalog.yaml  load-yaml-file.yaml  log-warning.yaml  parse-spec.yaml  perform-redirect.yaml  redirect-short-link.yaml  register-spec.yaml  (+30 more)
specs/components/: built-graph.yaml  loaded-registry.yaml  scanned-codebase.yaml
specs/invariants/: every-error-has-alt-flow.yaml  every-input-partition-covered.yaml  extends-no-step-id-clash.yaml  generated-files-idempotent.yaml  graph-acyclic.yaml  implementation-has-spec.yaml  kind-determines-schema.yaml  no-circular-extends.yaml  no-circular-refs.yaml  (+4 more)
src/ucf/: cli.py  (+4 more)
tools/: generate_adapter_conformance_schema.py  generate_adapter_protocol_schema.py  generate_change_governance_schema.py  generate_change_lifecycle_schema.py  generate_evidence_status_schema.py  generate_generation_schema.py  generate_implementation_evidence_schema.py  generate_inventory_schema.py  generate_ir_schema.py  generate_onboarding_schema.py  generate_ratchet_schema.py  generate_ratchet_v2_schema.py  generate_runtime_evidence_schema.py  generate_spec_schema.py  generate_trust_ir_schema.py  go_stdlib_adapter_contract.py  go_stdlib_platform_contract.py  go_stdlib_toolchain.py  installed_go_stdlib_platform_smoke.py  installed_go_stdlib_smoke.py  installed_python_legacy_quote_smoke.py  installed_typescript_fastify_smoke.py  package_contract.py  quality_gates.py  rel001_benchmark.py  rel001_benchmark_scenarios.py  release_check.py  typescript_fastify_adapter_contract.py
web/: package-lock.json  package.json
(+680 files in other folders)
