[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "ucf"
version = "0.1.0"
description = "Use Case-Driven Development Framework"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "networkx>=3.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx>=0.28",
    "jsonschema>=4.23",
]

[project.scripts]
ucf = "ucf.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ucf"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ucf --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/ucf"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
